deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qwer-app
  namespace: qwer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: qwer-app
  template:
    metadata:
      labels:
        app: qwer-app
    spec:
      containers:
        - name: jboss
          image: default-route-openshift-image-registry.apps.ext2.mtp.local/qwer/eap74-openjdk17-openshift-rhel8:2025-03-27-15-42-02
          ports:
            - containerPort: 8080
