service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qwer-service
  namespace: qwer
spec:
  selector:
    app: qwer-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
